[effect] Fix a warning